# DS

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  ROADMAP_ARCHIVE.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  dataset-scout.md
.claude/skills/add-library-function/: SKILL.md
.claude/skills/demand-loop/: SKILL.md
.claude/skills/demand-loop/scripts/: consumer_matrix.py
.claude/skills/roadmap-honesty/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deps-upgrade.yml  docs.yml  release.yml
docs/: api.md  guide.md  index.md
notebooks/: README.md
projects/: README.md
projects/_example/: pipeline.py
projects/adult_income/: README.md  pipeline.py
projects/adult_income/notebooks/: README.md
projects/adult_income/tests/: test_pipeline.py
projects/air_quality/: README.md  pipeline.py
projects/air_quality/notebooks/: README.md
projects/air_quality/tests/: test_pipeline.py
projects/bank_marketing/: README.md  pipeline.py
projects/bank_marketing/notebooks/: README.md
projects/bank_marketing/tests/: test_pipeline.py
projects/bbc_news/: README.md  pipeline.py
projects/bbc_news/notebooks/: README.md
projects/bbc_news/tests/: test_pipeline.py
projects/diamonds/: README.md  pipeline.py
projects/diamonds/notebooks/: README.md
projects/diamonds/tests/: test_pipeline.py
projects/flights/: README.md  pipeline.py
projects/flights/notebooks/: README.md
projects/flights/tests/: test_pipeline.py
projects/mammography/: README.md  pipeline.py
projects/mammography/notebooks/: README.md
projects/mammography/tests/: test_pipeline.py
projects/nyc_taxis/: README.md  pipeline.py
projects/nyc_taxis/notebooks/: README.md
projects/nyc_taxis/tests/: test_pipeline.py
projects/sms_spam/: README.md  pipeline.py
projects/sms_spam/notebooks/: README.md
projects/sms_spam/tests/: test_pipeline.py
projects/store_sales/: README.md  pipeline.py
projects/store_sales/notebooks/: README.md
projects/store_sales/tests/: test_pipeline.py
projects/sunspots/: README.md  pipeline.py
projects/sunspots/notebooks/: README.md
projects/sunspots/tests/: test_pipeline.py
projects/titanic/: README.md  pipeline.py
projects/titanic/notebooks/: README.md
projects/titanic/tests/: test_pipeline.py
src/ds/: __init__.py  _serde.py  cli.py  config.py  logging.py  pipeline.py  reproducibility.py
src/ds/eda/: __init__.py
src/ds/evaluation/: __init__.py
src/ds/features/: __init__.py
src/ds/io/: __init__.py
src/ds/modeling/: __init__.py  baseline.py  nlp.py  persistence.py  tabular.py  timeseries.py
src/ds/preprocessing/: __init__.py
src/ds/utils/: __init__.py
src/ds/validation/: __init__.py
src/ds/viz/: __init__.py
templates/project/: copier.yml
templates/project/template/: README.md.jinja  pipeline.py.jinja
templates/project/template/notebooks/: README.md.jinja
templates/project/template/tests/: test_pipeline.py.jinja
tests/: conftest.py  test_cli.py  test_core.py  test_example.py  test_io.py  test_modeling.py  test_pipeline.py  test_processing.py  test_public_api.py  test_roadmap_size.py  test_utils.py  test_viz.py
