[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds"
dynamic = ["version"]
description = "Data science toolkit for every situation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Balazs Dejczo", email = "balazs.dejczo@gmail.com" }]
keywords = ["data-science", "machine-learning", "toolkit"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

# Lean core: the utilities every DS process relies on. Domain-heavy stacks
# live in the optional extras below so the default install stays fast.
dependencies = [
    "pandas>=3.0.3",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "numpy>=2.4.6",
    "scikit-learn>=1.9.0",
    "pandera>=0.32.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "matplotlib>=3.11.0",
]

[project.optional-dependencies]
# NLP / LLM work. Install with:  uv sync --extra nlp
nlp = [
    "tiktoken>=0.13.0",
    "sentence-transformers>=5.6.0",
    "anthropic>=0.116.0",
]
# Time-series / forecasting. Install with:  uv sync --extra timeseries
timeseries = [
    "statsmodels>=0.14.6",
    "sktime>=1.0.1",
]
# Everything, for a full workstation setup.
all = ["ds[nlp,timeseries]"]

[project.urls]
Homepage = "https://github.com/BudSpencR/DS"
Repository = "https://github.com/BudSpencR/DS"

# Developer tooling lives in a dependency group so `uv sync` installs it by
# default for contributors but it is never shipped to consumers of the library.
[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pre-commit>=4.6.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.6",
    "pandas-stubs>=3.0.3.260530",
    "copier>=9.17.0",
]

# Single source of truth for the version: __version__ in src/ds/__init__.py.
[tool.hatch.version]
path = "src/ds/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ds"]

# ─────────────────────────── Tooling configuration ───────────────────────────

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, widely-used rule set: pyflakes, pycodestyle, isort, pyupgrade,
# bugbear, comprehensions, and simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ds"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
packages = ["ds"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Third-party data libraries ship incomplete type info; don't fail on them.
[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "pandera.*",
    "statsmodels.*",
    "sktime.*",
    "tiktoken.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=ds --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
source = ["ds"]
branch = true
